fixed css flexbox layout so the flex container wraps better. using wrap/space between and justify center content

--- a/css/style.css
+++ b/css/style.css
@@ -110,27 +110,28 @@ section ul {
 
 .flex-container {
   display: flex;
-  flex-wrap: nowrap;
-  padding: .5px;
+  flex-wrap: wrap;
   padding-bottom: 100px;
+  padding-left: 125px;
+  padding-right: 125px;
   grid-gap: 1rem;
   margin: auto;
   background-image: linear-gradient(white, grey);
-
+  justify-content: space-between;
 }
 
 
 .flex-item {
-  width: 100%;
-  /* margin: 10px; */
-  margin: 75px;
+  /* width: 100%; */
+  /* margin: 75px; */
   border-bottom: 4px solid #ccc;
-  /* border: 4px solid #ccc; */
-  /* background-color: rgba(255, 255, 255, .8); */
+  /* border: 4px solid #ccc;
+  background-color: rgba(255, 255, 255, .8); */
   padding: .5rem 1rem 1rem;
-  padding-left: 175px;
-  min-width: 550px;
+  /* padding-left: 175px; */
+  min-width: 450px;
   list-style-position: inside;
+  justify-content: center;
 
  } 
  
@@ -157,7 +158,7 @@ footer {
 }
 
 
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 1325px) {
 
   .flex-container {
     flex-direction: column;
